--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "phpunit/phpunit": "^9.4"
     },
     "autoload": {
-        "files": [],
+        "files": [
+            "src/helpers.php"
+        ],
         "psr-4": {
             "Johnylemon\\Apidocs\\": "src/"
         }
