--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         "laravel/framework": "^6.0 || ^7.0 || ^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.2",
-        "phpunit/phpunit": "^9.4"
+        "phpunit/phpunit": "^9.4",
+        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0"
     },
     "autoload": {
         "files": [
