--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,12 @@
         "generate"
     ],
     "require": {
+        "php": "^7.3 || ^8.0",
         "laravel/framework": "^6.0 || ^7.0 || ^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
-        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0"
+        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^6.6"
     },
     "autoload": {
         "files": [
